--- a/scentora-ecommerce/src/components/Hero.css
+++ b/scentora-ecommerce/src/components/Hero.css
@@ -65,10 +65,42 @@
     }
 }
 
-@media (max-width: 320px) {
-    .hero p {
-        text-align: center;
-    }
+@media (min-width:  768px) {
+  .hero {
+    min-height: 90vh;
+    text-align: left;
+    justify-content: flex-start;
+    
+  }
+
+  .hero::before {
+    content: '';
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%; 
+    height: 100%;
+    background: linear-gradient(to right, rgba(255,255,255,0.85), rgba(255,255,255,0));
+    z-index: 1;
+  }
+
+
+  .hero-overlay {
+    margin-left: 9rem;
+    background: transparent;
+    box-shadow: none;
+    position: relative;
+    color: var(--eerrie-black);
+    z-index: 2;
+  }
+
+  .hero-overlay h1 {
+    font-size: 3rem;
+  }
+
+  .break-desktop {
+    display: block;
+  }
 }
 
 
