--- a/scentora-ecommerce/src/components/Hero.css
+++ b/scentora-ecommerce/src/components/Hero.css
@@ -41,8 +41,8 @@
   font-weight: 500;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  background-color: var(--eerrie-black);
-  color: #fff;
+  background-color: var(--gold); 
+  color: var(--eerrie-black);
   border: none;
   border-radius: 5px;
   cursor: pointer;
