--- a/scentora-ecommerce/src/components/Hero.css
+++ b/scentora-ecommerce/src/components/Hero.css
@@ -105,4 +105,33 @@
   }
 }
 
+@media (min-width: 765px) and (max-width: 1024px) {
+
+  .hero {
+    min-height: 60vh;
+    padding-top: 1.5rem;
+  }
+
+  .hero-overlay {
+    margin-left: 0;
+  }
+
+  .hero-overlay h1 {
+    font-size: 2.5rem;
+  }
+
+}
+
+@media (min-width: 426px) and (max-width: 768px) {
+
+  .hero {
+    min-height: 50vh;
+  }
+
+  .hero-overlay h1 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    padding-top: 1.5rem;
+  }
+}
 
