--- a/scentora-ecommerce/src/components/PerfumeofTheWeek.css
+++ b/scentora-ecommerce/src/components/PerfumeofTheWeek.css
@@ -1,111 +1,84 @@
-
 .perfumeWeek {
+  margin-top: 2rem;
   padding: 2rem 1rem;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: var(--bg-baby-powder);
-  border-radius: 12px;
-  margin: 1rem;
-  color: var(--eerrie-black);
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
 }
 
-.glassTitleWrapper {
-  display: inline-block;
-  margin: 0 auto 2rem;
-  padding: 1rem 1rem;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px) saturate(180%);
-  -webkit-backdrop-filter: blur(10px) saturate(180%);
-  border-radius: 12px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+.featuredWrapper {
+  max-width: 1400px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.sectionTitle {
-  text-align: center;
-  font-family: var(--font-title);
-  font-size: 1.4rem;
-  color: var(--eerrie-black);
+.perfumeText h3 {
+  font-size: 0.9rem;
+  font-weight: 700;
+  border: 2px solid var(--gold);
+  font-family: var(--font-body);
+  width: fit-content;
+  border-radius: 16px;
+  padding: 0.3rem 0.7rem;
+  margin-bottom: 2rem;
+}
+
+
+.perfumeTitle {
+  font-size: 1.3rem;
+}
+
+.perfumeText p {
+  color: #5A5A5A;
+  padding-top: 1rem;
+  font-family: var(--font-body);
+  margin-bottom: 2rem;
+  line-height: 1.4rem;
+}
+
+.perfumeImgWrapper img {
+  width: 100%;
+}
+
+.perfumeImgWrapper {
   position: relative;
 }
 
-.sectionTitle::after {
+.perfumeImgWrapper::before {
   content: '';
-  display: block;
-  height: 3px;
-  width: 60px;
-  background-color: #C09177;
-  margin: 0.5rem auto 0;
-  border-radius: 2px;
-  transition: width 0.4s ease;
-}
-
-.sectionTitle:hover::after {
-  width: 90px;
-}
-
-.perfumeContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 4rem;
-  align-items: center;
-}
-
-.perfumeText {
-  text-align: center;
-  max-width: 500px;
-  font-family: var(--font-body);
-}
-
-.perfumeTitle {
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--eerrie-black);
-  margin-bottom: 1rem;
-}
-
-.perfumeDesc {
-  color: #666;
-  font-size: 1rem;
-  margin-bottom: 1.5rem;
-  font-family: var(--font-body);
-}
-
-
-.perfumeImgWrapper img {
-  max-width: 300px;
+  position: absolute;
   width: 100%;
-  border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-}   
+  height: 120%;
+  background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.2) 0%, transparent 70%);
+  z-index: 0;
+  filter: blur(40px);
+}
+
 
 @media (min-width: 768px) {
-    .perfumeWeek {
-        margin-top: 3rem;
-    }
-
-
-    .glassTitleWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
+  .perfumeWeek {
+    margin-top: 4rem;
   }
-  .perfumeContainer {
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
+
+  .featuredWrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+
+}   
+
+@media (min-width: 1440px) {
+  .featuredWrapper {
+    gap: 7rem;
   }
 
   .perfumeText {
-    flex: 1;
-    max-width: 500px;
+    padding-bottom: 3rem;
   }
 
-  .perfumeImgWrapper {
-    flex: 1;
-    display: flex;
-    justify-content: center;
+  .perfumeDescripton {
+    width: 600px;
   }
+
 }
