add dark-gray too root colors

--- a/scentora-ecommerce/src/index.css
+++ b/scentora-ecommerce/src/index.css
@@ -5,6 +5,7 @@
   --font-title: 'Cinzel', serif;  
   --font-body: 'Poppins', sans-serif;
   --eerrie-black: #1C1C1C;
+  --dark-gray: #555555;
   --gold: #D4AF37;
   --bg-baby-powder: #F9F9F6;
   --isabaseline: #EDE9E3;
