--- a/scentora-ecommerce/src/pages/ProductDetails.css
+++ b/scentora-ecommerce/src/pages/ProductDetails.css
@@ -12,19 +12,20 @@
   flex-wrap: wrap;
 }
 
+
 .product-info h1 {
-    font-family: var(--font-body);
-    font-weight: 400;
-    color: var(--eerie-black);
-    font-size: 1.5rem;
+  font-family: var(--font-body);
+  font-weight: 400;
+  color: var(--eerie-black);
+  font-size: 1.5rem;
 }
 
 .product-category {
-    padding-top: 3px;
-    color: #666;
-    font-family: var(--font-body);
-    font-size: 14px;
-    letter-spacing: 1px;
+  padding-top: 3px;
+  color: #666;
+  font-family: var(--font-body);
+  font-size: 14px;
+  letter-spacing: 1px;
 }
 
 .main-image {
@@ -48,9 +49,9 @@
 }
 
 .product-price {
-    padding-top: 6px;
-    font-size: 20px;
-    font-family: var(--font-text);
+  padding-top: 6px;
+  font-size: 20px;
+  font-family: var(--font-text);
 }
 
 .product-info {
@@ -60,13 +61,15 @@
 .free-shipping {
   font-size: 13px;
   font-family: var(--font-body);
-  color: green;
+  color: var(--dark-gray);
+  font-weight: 500;
 }
 
 .description {
-  margin: 1rem 0;
+  margin: 0.7rem 0;
   color: #444;
   font-size: 15px;
+  font-weight: 500;
 }
 
 @media (min-width: 1440px) {
