add some styles to quantity-selector and quantity-selector buttons

--- a/scentora-ecommerce/src/pages/ProductDetails.css
+++ b/scentora-ecommerce/src/pages/ProductDetails.css
@@ -74,6 +74,52 @@
 
 @media (min-width: 1440px) {
     .description {
-        width: 500px;
-    }
+      width: 500px;
+  }
 }
+
+.quantity {
+  display: flex;
+  flex-direction: column;
+}
+
+.quantity h3 {
+  font-family: var(--font-body);
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.quantity-selector {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-top: 0.5rem;
+  width: 100px;
+}
+
+.quantity-selector button {
+  flex: 1;
+  background: white;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 5px 0;
+  transition: background-color 0.2s, transform 0.1s;
+}
+
+.quantity-selector button:active {
+  background-color: #f0f0f0;
+  transform: scale(0.95);
+}
+
+.quantity-selector .number {
+  flex: 1;
+  text-align: center;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  font-size: 16px;
+  padding: 5px 0;
+}  
+
