--- a/scentora-ecommerce/src/pages/ProductDetails.css
+++ b/scentora-ecommerce/src/pages/ProductDetails.css
@@ -123,3 +123,47 @@
   padding: 5px 0;
 }  
 
+.product-buttons {
+  margin-top: 1.5rem;
+  display: flex;
+  gap: 9px;
+}
+
+.button-icon i {
+  font-size: 20px;
+
+}
+
+@media (max-width: 376px) {
+  .product-buttons {
+    flex-direction: column;
+  }
+
+  .button-icon {
+    width: 100%;
+  }
+}
+
+.guarantees {
+  margin-top: 1rem;
+  list-style: none;
+  padding: 0;
+}
+
+.guarantees li {
+  margin: 0.5rem 0;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .product-details {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-image img {
+    max-width: 100%;
+  }
+
+}
+
