change classname to perfume-category

--- a/scentora-ecommerce/src/pages/ProductDetails.css
+++ b/scentora-ecommerce/src/pages/ProductDetails.css
@@ -20,7 +20,7 @@
   font-size: 1.5rem;
 }
 
-.product-category {
+.perfume-category {
   padding-top: 3px;
   color: #666;
   font-family: var(--font-body);
