--- a/scentora-ecommerce/src/components/Navbar.css
+++ b/scentora-ecommerce/src/components/Navbar.css
@@ -32,7 +32,7 @@
   margin-right: 1rem;
 }
 
-.hamburger, .cartIconMobile {
+.hamburger {
   display: block;
   cursor: pointer;
   background: none;
@@ -40,6 +40,33 @@
   font-size: 1rem;
   text-align: center;
   color: var(--eerrie-black);
+}
+
+.cartIconMobile {
+  cursor: pointer;
+  background: none;
+  border: none;
+  position: relative;
+}
+
+.cartIconMobile img {
+  transition: color 0.3s ease;
+}
+
+.cartIconDesktop img:hover {
+  transform: scale(1.05);
+}
+
+.cart-count {
+  position: absolute;
+  top: -7px;
+  right: -10px;
+  background-color: var(--gold);
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 50%;
+  padding: 1px 4px;
 }
 
 .mobileSidebar {
@@ -145,15 +172,15 @@
     cursor: pointer;
     background: none;
     border: none;
+    position: relative;
   }
 
-  .cartIconDesktop i {
-    color: var(--eerrie-black);
+  .cartIconDesktop img {
     transition: color 0.3s ease;
   }
 
-  .cartIconDesktop i:hover {
-    color: var(--gold);
+  .cartIconDesktop img:hover {
+   transform: scale(1.05);
   }
 
   .cartSidebar {
