--- a/scentora-ecommerce/src/pages/ProductDetails.css
+++ b/scentora-ecommerce/src/pages/ProductDetails.css
@@ -49,7 +49,7 @@
 }
 
 .product-price {
-  padding-top: 6px;
+  padding-top: 9px;
   font-size: 20px;
   font-family: var(--font-text);
 }
@@ -66,15 +66,16 @@
 }
 
 .description {
-  margin: 0.7rem 0;
-  color: #444;
-  font-size: 15px;
+  margin: 0.9rem 0;
+  color: var(--dark-gray);
+  font-family: var(--font-body);
+  font-size: 14px;
   font-weight: 500;
 }
 
 @media (min-width: 1440px) {
-    .description {
-      width: 500px;
+  .description {
+    width: 500px;
   }
 }
 
