--- a/scentora-ecommerce/src/pages/Cart.css
+++ b/scentora-ecommerce/src/pages/Cart.css
@@ -6,8 +6,17 @@
 .cart-container {
   margin: auto;
   max-width: 1440px;
-  padding: 3rem;
-  margin-top: 4rem;
+  margin-top: 2rem;
+}
+
+.cart-empty {
+  margin: 14px;
+  padding: 10px;
+}
+
+.cart-empty p {
+  padding-bottom: 20px;
+  font-size: 16px;
 }
 
 .cart-header {
