--- a/scentora-ecommerce/src/pages/Cart.css
+++ b/scentora-ecommerce/src/pages/Cart.css
@@ -21,7 +21,6 @@
 
 .cart-header {
   display: flex;
-  gap: 1.2rem;
 }
 
 .img-wrapper img {
@@ -35,21 +34,20 @@
 }
 
 .card-product-container {
-  padding: 15px;
+  padding: 10px;
 }
 
 .cart-products {
   display: flex;
-  flex-wrap: wrap;
+  align-items: flex-start;
   gap: 2rem;
 }
 
 .cart-layout {
-  width: 70%;
+  width: 60%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
 }
-
 .cart-item-heading {
   background-color: #f4f4f4;
   padding: 20px;
