Add flex column layout for divs inside cart-price

--- a/scentora-ecommerce/src/pages/Cart.css
+++ b/scentora-ecommerce/src/pages/Cart.css
@@ -112,6 +112,11 @@
   text-align: right;
 }
 
+.cart-price div {
+  display: flex;
+  flex-direction: column;
+}
+
 .cart-new-price {
   font-size: 16px;
   font-weight: 600;
