--- a/scentora-ecommerce/src/pages/Cart.css
+++ b/scentora-ecommerce/src/pages/Cart.css
@@ -92,7 +92,7 @@
 .cart-item-details h3 {
   font-family: var(--font-body);
   font-weight: 500;
-  font-size: 19px;
+  font-size: 18px;
 }
 
 .cart-quantity-wrapper h4{
@@ -118,7 +118,7 @@
 }
 
 .cart-new-price {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 600;
   font-family: var(--font-body);
   color: var(--errie-black);
@@ -126,7 +126,8 @@
 }
 
 .cart-old-price {
-  font-size: 15px;
+  font-size: 12px;
+  font-family: var(--font-body);
   text-decoration: line-through;
   font-weight: 400;
   color: #999;
