--- a/scentora-ecommerce/src/pages/Cart.css
+++ b/scentora-ecommerce/src/pages/Cart.css
@@ -83,6 +83,12 @@
   height: auto;
 }
 
+.cart-wrapper {
+  display: flex;
+  flex: 1;
+  gap: 2rem;
+}
+
 .cart-item-details {
   display: flex;
   flex-direction: column;
