--- a/scentora-ecommerce/src/pages/Cart.css
+++ b/scentora-ecommerce/src/pages/Cart.css
@@ -186,4 +186,18 @@
   margin-top: 9px;
 }
 
+@media (max-width: 768px) {
+
+  .cart-products {
+    flex-direction: column;
+  }
+
+  .cart-layout {
+    width: 100%;
+  }
+
+  .cart-summary {
+    width: 100%;
+  }
+}
 
