--- a/scentora-ecommerce/src/pages/Cart.css
+++ b/scentora-ecommerce/src/pages/Cart.css
@@ -201,3 +201,58 @@
   }
 }
 
+@media (max-width: 426px) {
+  .cart-header h1 {
+    font-size: 23px;
+    padding-top: 9px;
+  }
+
+  .close-icon {
+    width: 25px;
+    height: 25px;
+    border: none;
+    align-self: flex-start;
+    margin-top: 15px;
+  }
+
+  .cart-item {
+    margin-top: 0.5rem;
+  }
+
+  .cart-item:not(:last-child) {
+    border-bottom: 1px solid #ddd;
+  }
+
+  .cart-wrapper {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .cart-item-details {
+    gap: 1rem;
+  }
+
+  .cart-item-details h3 {
+    font-size: 16px;
+  }
+
+  .cart-price:last-child {
+    margin-left: 0;
+  }  
+
+  .cart-price {
+    text-align: left;
+
+  }
+
+  .cart-price div {
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .wishlist {
+    padding-top: 9px;
+    padding-bottom: 5px;
+  }
+}
