--- a/scentora-ecommerce/src/App.css
+++ b/scentora-ecommerce/src/App.css
@@ -85,3 +85,57 @@
   transition: all 0.3s ease;
 
 }
+
+
+.sidebarOverlay {
+  position: fixed;
+  top: 0; 
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+  z-index: 1000;
+}
+
+.sidebarOverlay.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.sidebarWrapper {
+  position: fixed;
+  height: 100vh;
+  top: 0;
+  bottom: 0;
+  width: 70%;
+  max-width: 320px;
+  background: #fff;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  padding: 2rem 1.5rem;
+  transform: translateX(100%);
+  transition: transform 0.3s ease;
+  overflow-y: auto;
+  z-index: 1001;
+}
+
+.sidebarWrapper.left {
+  left: 0;
+  transform: translateX(-100%);
+}
+
+.sidebarWrapper.open.left {
+  transform: translateX(0);
+}
+
+/* Right */
+.sidebarWrapper.right {
+  right: 0;
+  transform: translateX(100%);
+}
+
+.sidebarWrapper.open.right {
+  transform: translateX(0);
+}
