--- a/scentora-ecommerce/src/components/CartContent.css
+++ b/scentora-ecommerce/src/components/CartContent.css
@@ -218,13 +218,8 @@
     font-size: 16px;
   }
 
-  .cart-price:last-child {
-    margin-left: 0;
-  }  
-
-  .cart-price {
-    text-align: left;
-
+  .wishlist {
+    visibility: hidden;
   }
 
   .delete-icon {
@@ -234,16 +229,14 @@
     align-self: flex-end;
   }
 
-  .wishlist {
-    padding-top: 9px;
-    padding-bottom: 5px;
-  }
+  
 }
 
 @media (min-width: 1440px) {
   .item-image-wrapper img{
-    width: 200px;
+    width: 150px;
   }
+
   .cart-layout {
     width: 70%;
   }
