--- a/scentora-ecommerce/src/components/CartContent.css
+++ b/scentora-ecommerce/src/components/CartContent.css
@@ -143,7 +143,7 @@
 }
 
 .cart-summary {
-  width: 350px;
+  width: 22rem;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   padding: 1.5rem;
 }
@@ -171,6 +171,7 @@
   width: 100%;
   margin-top: 9px;
 }
+
 
 @media (max-width: 768px) {
 
