--- a/scentora-ecommerce/src/App.css
+++ b/scentora-ecommerce/src/App.css
@@ -86,7 +86,6 @@
 
 }
 
-
 .sidebarOverlay {
   position: fixed;
   top: 0; 
@@ -168,3 +167,34 @@
 .sidebarWrapper.open.right {
   transform: translateX(0);
 }
+
+.cartsidebarHeader {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.cartsidebarHeader h2 {
+  font-family: var(--font-title);
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.spacer {
+  width: 25px;
+}
+
+.cartsidebarHeader button {
+  width: 25px;
+  height: 25px;
+  border: none;
+  border-radius: 50%;
+  background: #f0f0f0;
+  color: var(--dark-gray);
+  margin-bottom: 5px;
+  margin-right: 1rem;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background 0.2s ease;
+}
+
