--- a/scentora-ecommerce/src/components/CartContent.css
+++ b/scentora-ecommerce/src/components/CartContent.css
@@ -1,6 +1,6 @@
 
 .cart-product-container.sidebar  {
- padding: 10px;
+ padding: 15px;
 }
 
 .cart-products {
@@ -9,7 +9,6 @@
   margin-top: 1rem;
   gap: 2rem;
 }
-
 
 .cart-layout {
   width: 60%;
@@ -40,6 +39,7 @@
 
 .sidebar .cart-item {
   gap: 0.5rem;
+  padding-bottom: 15px;
 }
 
 .icon-btn {
@@ -83,6 +83,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.sidebar .cart-item:not(:last-child) {
+  border-bottom: 1px solid #ddd;
 }
 
 .cart-item-details h3 {
@@ -209,7 +213,7 @@
   .cart-item:not(:last-child) {
     border-bottom: 1px solid #ddd;
   }
-  
+
   .cart-item-details h3 {
     font-size: 14px;
   }
