--- a/scentora-ecommerce/src/pages/Home.css
+++ b/scentora-ecommerce/src/pages/Home.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 .categories-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -12,3 +14,72 @@
 }
 
 
+.whyshop-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  background-color: #f7f7f7;
+  padding-bottom: 5rem;
+  padding-top: 1rem;
+}
+
+.whyshop-card {
+  display: flex;
+  align-items: center;
+  gap: 0.9rem;
+}
+
+.whyshop-icon {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  background: var(--gold);
+}
+
+.whyshop-icon img {
+  width: 40px;
+  height: 40px;
+}
+
+.whyshop-text h3{
+  font-family: 'Playfair Display', serif;
+  font-size: 19px;
+  color: #222;
+  font-weight: 600;
+  margin: 0 0 0.6rem;
+}
+
+.whyshop-text p {
+  font-family: var(--font-body);
+  font-size: 13px;
+  color: #555;
+  line-height: 1.5;
+}
+
+.highlight {
+  color: #111;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+@media (max-width: 1024px) {
+  .whyshop-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .whyshop-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .whyshop-card {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
