--- a/scentora-ecommerce/src/pages/Shop.css
+++ b/scentora-ecommerce/src/pages/Shop.css
@@ -24,9 +24,11 @@
 }
 
 .shop-title {
-  font-size: 3rem;
-  font-family: 'Playfair Display', serif;
-  margin-top: 0.5rem;
+  font-size: 2rem;
+  font-family: var(--font-title);
+  font-weight: 600;
+  margin-top: 0.7rem;
+  text-transform: uppercase;
 }
 
 .shop-controls {
@@ -61,22 +63,34 @@
   font-size: 1rem;
   color: #555555;
   cursor: pointer;
-  
+}
+
+@media (max-width: 376px) {
+  .filter-button, .sort-select {
+    font-size: 0.8rem;
+  }
 }
 
 .product-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 2rem;
-  justify-content: start;
 }
+
 
 .product-card {
   background: #f9f9f9;
   padding: 1rem;
   border-radius: 12px;
-  text-align: center;
+  text-align: left;
   position: relative;
+  cursor: pointer;
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+}
+
+.product-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 
 .product-card img {
@@ -87,24 +101,27 @@
 
 .product-name {
   font-size: 1rem;
-  margin: 0.5rem 0;
+  margin: 0.3rem 0;
+  font-family: var(--font-title);
+  letter-spacing: 0.6px;
 }
 
 .product-rating {
   margin-top: 5px;
   margin-bottom: 5px;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
-
 .product-category {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   color: #888;
   text-transform: capitalize;
+  letter-spacing: 1px;
 }
 
 .price {
-  font-size: 1rem;
+  font-size: .9rem;
+
 }
 
 .old-price {
@@ -115,7 +132,11 @@
 
 .new-price {
   color: var(--eerrie-black);
-  font-weight: bold;
+}
+
+.old-price, .new-price {
+  font-family: var(--font-body);
+  font-weight: 600;
 }
 
 .sale-badge {
@@ -132,3 +153,9 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
 }
+
+.product-name, .product-category, .product-rating, .price {
+  padding-bottom: 0.2rem;
+  padding-left: 3px;
+}
+ 
