change background color of whyshop section
change bg to #f3f3f3 and apply reduce the margin bottom

--- a/scentora-ecommerce/src/components/SectionWrapper.css
+++ b/scentora-ecommerce/src/components/SectionWrapper.css
@@ -4,10 +4,11 @@
 }
 
 .section-wrapper.whyshop {
-  background-color: #f7f7f7;
+  background-color: #f3f3f3;
   margin-top: 4rem;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
   padding: 1rem 2rem;
+}
 
 }
 
