--- a/scentora-ecommerce/src/pages/Home.css
+++ b/scentora-ecommerce/src/pages/Home.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 
 .categories-grid {
   display: grid;
@@ -18,7 +18,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
-  background-color: #f7f7f7;
+
   padding-bottom: 5rem;
   padding-top: 1rem;
 }
@@ -37,7 +37,7 @@
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
-  background: var(--gold);
+  background: #7e6950;      
 }
 
 .whyshop-icon img {
@@ -46,7 +46,7 @@
 }
 
 .whyshop-text h3{
-  font-family: 'Playfair Display', serif;
+  font-family: var(--font-heading);
   font-size: 19px;
   color: #222;
   font-weight: 600;
