--- a/scentora-ecommerce/src/index.css
+++ b/scentora-ecommerce/src/index.css
@@ -1,9 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 :root {
   --font-title: 'Cinzel', serif;  
+  --font-heading: 'Playfair Display', serif;
   --font-body: 'Poppins', sans-serif;
   --font-text: 'Roboto', sans-serif;
   --eerrie-black: #1C1C1C;
