add footer section wrapper styling
- Applied eerie-black background color to footer section
- Added padding for spacing within footer wrapper

--- a/scentora-ecommerce/src/components/SectionWrapper.css
+++ b/scentora-ecommerce/src/components/SectionWrapper.css
@@ -14,6 +14,10 @@
   background-color: var(--bg-light-pink);
   margin-top: 2rem;
 }
+
+.section-wrapper.footer {
+  background-color: var(--eerrie-black);
+  padding: 2rem; 
 }
 
 .section-container {
