--- a/scentora-ecommerce/src/pages/About.css
+++ b/scentora-ecommerce/src/pages/About.css
@@ -283,3 +283,28 @@
   }
 }
 
+
+/* about-cta section */
+.about-cta {
+  margin-top: 1rem;
+  text-align: center;
+  background: url('/images/pattern-bg.png');
+  padding: 4rem 2rem;
+  border-radius: 1rem;
+}
+
+.about-cta h2 {
+  font-family: var(--font-heading);
+}
+
+.about-cta-button {
+  margin-top: 1rem;
+}
+
+
+
+
+
+
+
+
