--- a/scentora-ecommerce/src/pages/About.css
+++ b/scentora-ecommerce/src/pages/About.css
@@ -252,7 +252,6 @@
   height: 280px;
   border-radius: 50%;
   overflow: hidden;
-  background: #fceecf;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -261,7 +260,9 @@
 
 .creator-image img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  border-radius: 50%;
+  padding: 5px;
   object-fit: cover;
 }
 
